.gitignore latex byproducts. Minor changes to whitepaper.

--- a/whitepaper/valence-protocol-trustless.tex
+++ b/whitepaper/valence-protocol-trustless.tex
@@ -20,7 +20,7 @@
 
 \title{Valence: A Protocol for Trustless Decentralized
 		Cryptocurrency Exchange}
-\author{Karim Helmy \\ Draft}
+\author{Karim Helmy \\ khelmy@andrew.cmu.edu}
 
 \begin{document}
 \maketitle
@@ -52,7 +52,7 @@
     wishing to trade assets, eliminating the problem of
     searching for a counterparty. In a centralized exchange, this function
     is performed by a single actor, who traders must trust to provide fair
-    pricing information, and who traders must trust. Centralized exchanges
+    pricing information and faithfully execute the trade. Centralized exchanges
     dramatically decrease counterparty risk for traders by requiring only
     that they trust the exchange. This model has been carried over from
     traditional exchanges to those specializing in cryptocurrencies, forming
