--- a/whitepaper/valence-protocol-trustless.tex
+++ b/whitepaper/valence-protocol-trustless.tex
@@ -20,7 +20,7 @@
 
 \title{Valence: A Protocol for Trustless Decentralized
 		Cryptocurrency Exchange}
-\author{Karim Helmy \\ khelmy@andrew.cmu.edu}
+\author{Karim Helmy \\ karim@valex.io}
 
 \begin{document}
 \maketitle
@@ -30,8 +30,7 @@
     trusted third party, an inherent systemic flaw.
     The Valence protocol describes a system for trustlessly
     exchanging cryptocurrencies on different blockchains in a decentralized
-    manner. By leveraging cross-blockchain atomic swaps and order-
-    match-based mining to establish a decentralized exchange, the
+    manner. By leveraging cross-blockchain atomic swaps and order-match-based mining to establish a decentralized exchange, the
     Valence protocol allows anonymous parties to exchange currencies
     without communicating. While Bitcoin and Ethereum, the two
     largest cryptocurrencies by market cap, are of particular
@@ -249,9 +248,9 @@
             \hline
             \texttt{Unit Limit} & \texttt{0.07} \\
             \hline
-            \texttt{Buy Address} & \texttt{35 Unger Ln} \\
+            \texttt{Buy Address} & \texttt{0xFAc1f70C0f03Da4f67d...} \\
             \hline
-            \texttt{Sell Address} & \texttt{12650 Corte Madera Ln} \\
+            \texttt{Sell Address} & \texttt{1A1zP1eP5QGe...} \\
             \hline
             \texttt{Order ID} & \texttt{ALICE} \\
             \hline
@@ -270,9 +269,9 @@
             \hline
             \texttt{Unit Limit} & \texttt{16} \\
             \hline
-            \texttt{Buy Address} & \texttt{1000 Corte Madera Ln} \\
+            \texttt{Buy Address} & \texttt{1XPTgDRhN8RFnzn...} \\
             \hline
-            \texttt{Sell Address} & \texttt{9 Unger Ln} \\
+            \texttt{Sell Address} & \texttt{0xACc1e6900d0eDE4fE8d...} \\
             \hline
             \texttt{Order ID} & \texttt{BOB} \\
             \hline
@@ -295,14 +294,14 @@
             \texttt{Unit Limit} & \texttt{16} & \texttt{0.07}
             		& \texttt{0.07} & \texttt{16} \\
             \hline
-            \texttt{Buy Address} & \texttt{1500 Corte Madera Ln}
-            		& \texttt{22 Unger Ln} & \texttt{35 Unger Ln}
-                    & \texttt{1000 Corte Madera Ln} \\
+            \texttt{Buy Address} & \texttt{1MCDMrgRyKnhnMhqiWC...}
+            		& \texttt{0xfbb1b73c4f0bda4f6...} & \texttt{0xFAc1f70C0f03Da4f67d...}
+                    & \texttt{1XPTgDRhN8RFnzn...} \\
             \hline
-            \texttt{Sell Address} & \texttt{4 Unger Ln}
-            		& \texttt{1345 Corte Madera Ln}
-                    & \texttt{12650 Corte Madera Ln}
-                    & \texttt{9 Unger Ln} \\
+            \texttt{Sell Address} & \texttt{0x30caa9e296276...}
+            		& \texttt{1AMXYgrRgNnxnMNNi...}
+                    & \texttt{1A1zP1eP5QGe...}
+                    & \texttt{0xACc1e6900d0eDE4fE8d...} \\
             \hline
             \texttt{Order ID} & \texttt{CAROL} & \texttt{DAVE}
             		& \texttt{ALICE} & \texttt{BOB} \\
@@ -337,11 +336,11 @@
             \hline
             \texttt{Unit Limit} & \texttt{16} & \texttt{0.07} \\
             \hline
-            \texttt{Buy Address} & \texttt{1500 Corte Madera Ln}
-            		& \texttt{22 Unger Ln} \\
+            \texttt{Buy Address} & \texttt{1MCDMrgRyKnhnMhqiWC...}
+            		& \texttt{0xfbb1b73c4f0bda4f6...} \\
             \hline
-            \texttt{Sell Address} & \texttt{4 Unger Ln}
-            		& \texttt{1345 Corte Madera Ln}  \\
+            \texttt{Sell Address} & \texttt{0x30caa9e296276...}
+            		& \texttt{1AMXYgrRgNnxnMNNi...}  \\
             \hline
             \texttt{Order ID} & \texttt{CAROL} & \texttt{DAVE} \\
             \hline
@@ -372,9 +371,9 @@
             \hline
             \texttt{Unit Limit} & \texttt{0.07} \\
             \hline
-            \texttt{Buy Address} & \texttt{22 Unger Ln} \\
+            \texttt{Buy Address} & \texttt{0xfbb1b73c4f0bda4f6...} \\
             \hline
-            \texttt{Sell Address} & \texttt{1345 Corte Madera Ln}  \\
+            \texttt{Sell Address} & \texttt{1AMXYgrRgNnxnMNNi...}  \\
             \hline
             \texttt{Order ID} & \texttt{DAVE} \\
             \hline
